V1 :
* Created project
* Added schema
* Added /directory route
* Added /acme/new-nonce route
* Added /acme/new-account route
* Automatically generate CA on tests
* Added /acme/new-order route(s) -> new-order, challenge, finalize, cert