@@ -1,3 +1,7 @@
+V2 :
+* Nonces cleanup
+* Improve code quality (pylint node > 9.5)
+
 V1 :
 * Created project
 * Added schema
